# hello-libvips

./: CMakeLists.txt  README.md  main.cpp
